--- a/index.html
+++ b/index.html
@@ -1,14 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- reset CSS stylesheet -->
     <link rel="stylesheet" href="./reset.css">
+    <!-- Bootstrap CSS stylesheet -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="./style.css">
     <title>Home Screen</title>
 </head>
+
 <body>
-    
+    <!-- Start Nav -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="./index.html">Connor Cote</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <!-- Nav bar for Home, Contact & Portfolio -->
+                <li class="nav-item active">
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+    <!-- End Nav -->
+
+    <!-- Start of Container -->
+    <div class="container">
+        <div class="card">
+            <section class="card-body">
+                <h2>About Me</h2>
+                <hr />
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="./Assets/Images/Dad, Kev and Me in Dublin.jpg" alt="Myself" class="img-thumbnail" />
+                    </div>
+                    <div class="col-md-9">
+                        <p>Hi! My name is Connor Cote. I have three older siblings, four nephews (soon to be one niece),
+                            many many cousins and spend the majority of my time focused on family, friends and work. I
+                            am in this class primarily to help my current career in the technology consulting field. I
+                            have a business background and want to learn more about web development and coding in
+                            particular. Pictured to the right is my older brother (Kevin), myself and my dad. This
+                            picture was taken at a football game - crazy to think about attending a large sporting event
+                            now! My story really starts in Atlanta where I was born and raised. I attended Saint Jude
+                            elementary school before attending Marist School starting in 7th grade. After Marist, I went
+                            north to attend Boston College (a school where I felt at home since all three of my
+                            siblings, my
+                            parents and my in-laws also attended). At Boston College, I majored in Finance and
+                            Accounting
+                            with a French language minor. I also had the opportunity to spend some time abroad during my
+                            junior year spending first semester in Paris, France (I was there in during the 2015
+                            bombings
+                            and terrorist attack and am happy to discuss it if you are interested). I spend second
+                            semester
+                            in Hong Kong and traveled throughout Southeast Asia. </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>After graduating from Boston College, I moved to New York City and started my career in
+                            Investment Banking at Bank of America Merrill Lynch. After 4,000+ hours, I realized that
+                            banking was not the career path I wanted and switched directions into consulting. Now I work
+                            as an <span class="Job">Operations Associate</span> for <span class="Job">Francisco Partners
+                                Consulting</span> which is the consulting arm of the private equity comapny, Francisco
+                            Partners. My goal for taking this class is to develop the ability to work closely with the
+                            product teams at the companies we invest in.</p>
+                    </div>
+                </div>
+        </div>
+        </section>
+    </div>
+
+    <!-- Bootstrap Javascript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
 
 </body>
+
 </html>
