Updated all HTML files and added pictures to assets folder to be used in the portfolio and home page

--- a/index.html
+++ b/index.html
@@ -35,25 +35,21 @@
                     <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
     <!-- End Nav -->
 
     <!-- Start of Container -->
     <div class="container">
-        <div class="card">
+        <main class="card">
             <section class="card-body">
                 <h2>About Me</h2>
                 <hr />
                 <div class="row">
-                    <div class="col-md-3">
-                        <img src="./Assets/Images/Dad, Kev and Me in Dublin.jpg" alt="Myself" class="img-thumbnail" />
-                    </div>
-                    <div class="col-md-9">
+                    <div class="col-md-12">
+                        <img src="./Assets/Images/Dad, Kev and Me in Dublin.jpg" alt="Myself" class="img-thumbnail rounded float-left" style="width: 150px;" id="homePicture"/>
+                    <!-- </div> -->
+                    <!-- <div class="col-md-9"> -->
                         <p>Hi! My name is Connor Cote. I have three older siblings, four nephews (soon to be one niece),
                             many many cousins and spend the majority of my time focused on family, friends and work. I
                             am in this class primarily to help my current career in the technology consulting field. I
@@ -63,15 +59,14 @@
                             now! My story really starts in Atlanta where I was born and raised. I attended Saint Jude
                             elementary school before attending Marist School starting in 7th grade. After Marist, I went
                             north to attend Boston College (a school where I felt at home since all three of my
-                            siblings, my
-                            parents and my in-laws also attended). At Boston College, I majored in Finance and
-                            Accounting
-                            with a French language minor. I also had the opportunity to spend some time abroad during my
+                            siblings, my parents and my in-laws also attended). At Boston College, I majored in Finance
+                            and
+                            Accounting with a French language minor. I also had the opportunity to spend some time
+                            abroad during my
                             junior year spending first semester in Paris, France (I was there in during the 2015
-                            bombings
-                            and terrorist attack and am happy to discuss it if you are interested). I spend second
-                            semester
-                            in Hong Kong and traveled throughout Southeast Asia. </p>
+                            bombings and terrorist attack and am happy to discuss it if you are interested). I spent
+                            second
+                            semester in Hong Kong and traveled throughout Southeast Asia. </p>
                     </div>
                 </div>
                 <div class="row">
@@ -85,8 +80,8 @@
                             product teams at the companies we invest in.</p>
                     </div>
                 </div>
-        </div>
-        </section>
+            </section>
+        </main>
     </div>
 
     <!-- Bootstrap Javascript -->
