--- a/portfolio.html
+++ b/portfolio.html
@@ -35,22 +35,38 @@
                     <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
     <!-- End Nav -->
 
     <!-- Start of Container -->
     <div class="container">
-        <div class="card">
-            <div class="card-body">
+        <main class="card">
+            <section class="card-body">
                 <h2>Portfolio</h2>
                 <hr />
-            </div>
-        </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="./Assets/Images/FP Headshot.JPG" alt="Work Picture" class="img-thumbnail"
+                            style="width: 350px;height: auto;" />
+                    </div>
+                    <div class="col-md-6">
+                        <img src="./Assets/Images/Telluride No Snow Winter.jpg" alt="Is Winter Coming?"
+                            class="img-thumbnail" style="width: 350px;height: auto;" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="./Assets/Images/Turks Umbrella.jpg" alt="Beach Travel" class="img-thumbnail"
+                            style="width: 350px;height: auto;" />
+                    </div>
+                    <div class="col-md-6">
+                        <img src="./Assets/Images/Alexander and Connor in Telluride.JPG" alt="Fun Uncle"
+                            class="img-thumbnail" style="width: 350px;height: auto" />
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 
 
