--- a/contact.html
+++ b/contact.html
@@ -35,17 +35,13 @@
                     <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
     <!-- End Nav -->
 
     <!-- Start of Container -->
     <div class="container">
-        <div class="card">
+        <main class="card">
             <div class="card-body">
                 <h2>Contact</h2>
                 <hr />
@@ -68,7 +64,7 @@
                     <button type="submit" class="btn btn-primary">Submit</<button>
                 </form>
             </div>
-        </div>
+        </main>
     </div>
 
     <!-- Bootstrap Javascript -->
