Deleted example images, worked on Portfolio page

--- a/contact.html
+++ b/contact.html
@@ -49,12 +49,12 @@
                 <form>
                     <div class="form-group">
                         <label for="Name">Name</label>
-                        <input type="name" class="form-control" id="exampleName" aria-describedby="nameHelp">
+                        <input type="name" class="form-control" id="exampleName" placeholder="John Smith" aria-describedby="nameHelp">
                     </div>
 
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="johnsmith@gmail.com" aria-describedby="emailHelp">
                     </div>
 
                     <div class="form-group" id="MessageBox">
