--- a/portfolio.html
+++ b/portfolio.html
@@ -47,22 +47,26 @@
                 <hr />
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="./Assets/Images/FP Headshot.JPG" alt="Work Picture" class="img-thumbnail"
-                            style="width: 350px;height: auto;" />
+                        <a href="https://www.linkedin.com/in/connor-r-cote" target="_blank">
+                            <img src="./Assets/Images/FP Headshot.JPG" alt="Work Picture" class="img-thumbnail" />
+                            <p>Check out My LinkedIn</p>
+                        </a>
                     </div>
                     <div class="col-md-6">
                         <img src="./Assets/Images/Telluride No Snow Winter.jpg" alt="Is Winter Coming?"
-                            class="img-thumbnail" style="width: 350px;height: auto;" />
+                            class="img-thumbnail" />
+                        <p>Traveling through Colorado</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="./Assets/Images/Turks Umbrella.jpg" alt="Beach Travel" class="img-thumbnail"
-                            style="width: 350px;height: auto;" />
+                        <img src="./Assets/Images/Turks Umbrella.jpg" alt="Beach Travel" class="img-thumbnail" />
+                        <p>Traveling on the Beach</p>
                     </div>
                     <div class="col-md-6">
                         <img src="./Assets/Images/Alexander and Connor in Telluride.JPG" alt="Fun Uncle"
-                            class="img-thumbnail" style="width: 350px;height: auto" />
+                            class="img-thumbnail" />
+                        <p>Being the "Fun Uncle" in the family</p>
                     </div>
                 </div>
             </section>
