updates to Portfolio page including photos and links

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,20 +53,26 @@
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <img src="./Assets/Images/Telluride No Snow Winter.jpg" alt="Is Winter Coming?"
-                            class="img-thumbnail" />
-                        <p>Traveling through Colorado</p>
+                        <a href="https://www.facebook.com/connor.cote" target="_blank">
+                            <img src="./Assets/Images/Telluride No Snow Winter.jpg" alt="Is Winter Coming?"
+                                class="img-thumbnail" />
+                            <p>Check out my Facebook!</p>
+                        </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="./Assets/Images/Turks Umbrella.jpg" alt="Beach Travel" class="img-thumbnail" />
-                        <p>Traveling on the Beach</p>
+                        <a href="https://www.instagram.com/cotec4/" target="_blank">
+                            <img src="./Assets/Images/Turks Umbrella.jpg" alt="Beach Travel" class="img-thumbnail" />
+                            <p>Check out my Instagram!</p>
+                        </a>
                     </div>
                     <div class="col-md-6">
-                        <img src="./Assets/Images/Alexander and Connor in Telluride.JPG" alt="Fun Uncle"
-                            class="img-thumbnail" />
-                        <p>Being the "Fun Uncle" in the family</p>
+                        <a href="https://github.com/cotec4" target="_blank">
+                            <img src="./Assets/Images/With Mom & Dad.jpg" alt="Fun Uncle"
+                                class="img-thumbnail" />
+                            <p>Check out my GitHub!</p>
+                        </a>
                     </div>
                 </div>
             </section>
