Updated pictures on Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,14 +48,13 @@
                 <div class="row">
                     <div class="col-md-6">
                         <a href="https://www.linkedin.com/in/connor-r-cote" target="_blank">
-                            <img src="./Assets/Images/FP Headshot.JPG" alt="Work Picture" class="img-thumbnail" />
-                            <p>Check out My LinkedIn</p>
+                                <img id="logo" src="./Assets/Images/FP Headshot.JPG" alt="Work Picture" class="img-thumbnail"/>
+                                <p>Check out My LinkedIn</p>
                         </a>
                     </div>
                     <div class="col-md-6">
                         <a href="https://www.facebook.com/connor.cote" target="_blank">
-                            <img src="./Assets/Images/Telluride No Snow Winter.jpg" alt="Is Winter Coming?"
-                                class="img-thumbnail" />
+                            <img src="./Assets/Images/Telluride No Snow Winter.jpg" alt="Is Winter Coming?" class="img-thumbnail"/>
                             <p>Check out my Facebook!</p>
                         </a>
                     </div>
@@ -69,7 +68,7 @@
                     </div>
                     <div class="col-md-6">
                         <a href="https://github.com/cotec4" target="_blank">
-                            <img src="./Assets/Images/With Mom & Dad.jpg" alt="Fun Uncle"
+                            <img src="./Assets/Images/BC Boys.jpg" alt="BC Boys"
                                 class="img-thumbnail" />
                             <p>Check out my GitHub!</p>
                         </a>
