nav-bar changes and text changes

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav ml-auto">
                 <!-- Nav bar for Home, Contact & Portfolio -->
-                <li class="nav-item active">
+                <li class="nav-item active" id="home">
                     <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="contact">
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
@@ -48,13 +48,11 @@
                 <div class="row">
                     <div class="col-md-12">
                         <img src="./Assets/Images/Dad, Kev and Me in Dublin.jpg" alt="Myself" class="img-thumbnail rounded float-left" style="width: 150px;" id="homePicture"/>
-                    <!-- </div> -->
-                    <!-- <div class="col-md-9"> -->
                         <p>Hi! My name is Connor Cote. I have three older siblings, four nephews (soon to be one niece),
                             many many cousins and spend the majority of my time focused on family, friends and work. I
                             am in this class primarily to help my current career in the technology consulting field. I
                             have a business background and want to learn more about web development and coding in
-                            particular. Pictured to the right is my older brother (Kevin), myself and my dad. This
+                            particular. Pictured to the left is my older brother (Kevin), myself and my dad. This
                             picture was taken at a football game - crazy to think about attending a large sporting event
                             now! My story really starts in Atlanta where I was born and raised. I attended Saint Jude
                             elementary school before attending Marist School starting in 7th grade. After Marist, I went
