--- a/contact.html
+++ b/contact.html
@@ -23,12 +23,12 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav ml-auto">
                 <!-- Nav bar for Home, Contact & Portfolio -->
-                <li class="nav-item">
+                <li class="nav-item" id="home">
                     <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item active" id="contact">
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
@@ -42,7 +42,7 @@
     <!-- Start of Container -->
     <div class="container">
         <main class="card">
-            <div class="card-body">
+            <section class="card-body">
                 <h2>Contact</h2>
                 <hr />
                 <!-- Bootstrap Contact Form -->
@@ -63,7 +63,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</<button>
                 </form>
-            </div>
+            </section>
         </main>
     </div>
 
