--- a/portfolio.html
+++ b/portfolio.html
@@ -23,12 +23,12 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav ml-auto">
                 <!-- Nav bar for Home, Contact & Portfolio -->
-                <li class="nav-item ">
+                <li class="nav-item" id="home">
                     <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="contact">
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
                 <li class="nav-item active">
