Updating responsive portfolio

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <i class="fab fa-aviato"></i>
             <p>Author: Connor Cote</p>
             <p>If you have any questions, please feel free to reach out to me at <a
-                    href="mailto:cotec4@gmail.com">cotec4@gmail.com</a>!</p>
+                    href="mailto:cotec4@gmail.com">cotec4@gmail.com</a> or at (404) 422-3109!</p>
         </div>
     </footer>
 
