--- a/portfolio.html
+++ b/portfolio.html
@@ -56,10 +56,10 @@
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <a href="https://www.facebook.com/connor.cote" target="_blank">
+                        <a href="./Assets/Connor R. Cote Resume.pdf" target="_blank">
                             <img src="./Assets/Images/Telluride No Snow Winter.jpg" alt="Is Winter Coming?"
                                 class="img-thumbnail" />
-                            <p>Check out my Facebook!</p>
+                            <p>Check out my Resume!</p>
                         </a>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
             <i class="fab fa-aviato"></i>
             <p>Author: Connor Cote</p>
             <p>If you have any questions, please feel free to reach out to me at <a href="mailto:cotec4@gmail.com">
-                    cotec4@gmail.com</a>!</p>
+                    cotec4@gmail.com</a> or at (404) 422-3109!</p>
         </div>
     </footer>
 
