--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
             <i class="fab fa-aviato"></i>
             <p>Author: Connor Cote</p>
             <p>If you have any questions, please feel free to reach out to me at <a href="mailto:cotec4@gmail.com">
-                    cotec4@gmail.com</a>!</p>
+                    cotec4@gmail.com</a> or at (404) 422-3109!</p>
         </div>
     </footer>
 
