--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="#homework">Homework    </a>
+                <a href="#homework">Homework </a>
             </li>
             <li>
                 <a href="#skills">Skills</a>
@@ -380,7 +380,7 @@
         </div>
     </footer>
     <!-- End footer -->
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/scripts.min.js"></script>
 </body>
 
